	* add a DBusDaemon
	* Make daemon multithreaded; performance improvements
	* Add sending thread to library, move to blocking IO
	* Ensure key directory exists when serving cookie auth
	* Add TCP support to daemon
	* Remove dependency on dbus-daemon for tests
	* add --version support for other programs
	* Add windows wrapper scripts
	* Test working on Windows

Version 1.13:

	* add AccessDenied signal
	* fix deadlock issue when sending objectpaths in signals, spotted by Mathis
	* add Path type which can be used for non-auto OBJECT_PATH handling, spotted by Mathis
	* fix some freebsd build issues:
		* remove explicit recursive make calls
		* parameterize /usr/lib as DBUSLIBDIR
	  Spotted by Roberto Francisco Arroyo Moreno <robfram -at- ugr -dot- es>
	* rejig build system to replace variables in wrapper in make stage and
	  use DESTDIR properly, hence removing the RUNPREFIX stuff.
	* add checks and documentation for DBusInterfaces not being in a package.
	  Spotted by Henrik Petander <henrik -dot- petander -at- iki -dot- fi>

Version 1.12:

	* fix internal-cross-test bugs and increase error verbosity
	* add org.freedesktop.DBus.Error.NoReply, change to that from my own
	* add -pedantic -std=c99 flags to GCC
	* remove supplied Hal classes as they are out of date
	* change to using tex4ht rather than latex2html

Version 1.11:

	* fix script replacement directories to be different to install directories
	* split install-doc and install-man to allow easy split -doc package

Version 1.10:

	* fix URLs to point to fdo 
	* check for signal path validity in Java
	* fix NameAcquired spelling
	* check array lengths and name lengths
	* support method calls with empty interfaces
	* support for non-activating remote objects
	* remove errant debug statemant left in 1.9
	* Fix List<List<Integer>> bug spotted by Remi Emonet
	  <remi.emonet -at- inrialpes -dot- fr>
	* Fix OBJECT_PATH handling; bug spotted by Remi Emonet
	  <remi.emonet -at- inrialpes -dot- fr>