@@ -35,6 +35,7 @@ Version 2.0:
 	* add --version support for other programs
 	* Add windows wrapper scripts
 	* Test working on Windows
+	* Add makefile target to build zip file for windows
 
 Version 1.13:
 
